--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@ J.
 			<form>
 				<div><label>FIRST NAME:<input type="text" name="text_field" placeholder="firstname"></label></div>
 					<div><label>LAST NAME:<input type="text" name="text_field" placeholder="lastname"></label></div>
-				<div><label>CONTACT NUMBER:<input type="contact" name="contact number_field"></label></div>
+				<div><label>CONTACT NUMBER:<input type="number" name="contact number_field"></label></div>
 				<div><label>EMAIL<input type="email" name="email_field" placeholder="email here"></label></div>
+				<div><label>SUBMIT<input type="submit"></label></div>
 			</form>
 		</div>
 		<div>		
